player controls 80% functional. mute/unmute needs a re-think of how to implement it. see comments.

--- a/README
+++ b/README
@@ -1,4 +1,6 @@
-Pandora Enhancer is a Google Chrome extension that adds more functionality to Pandora's awesome new HTML5 interface.
+Pandora Enhancer is an extension that adds more functionality to Pandora's awesome new HTML5 interface.
+
+It is currently available on the Chrome Web Store at https://chrome.google.com/webstore/detail/ipfamfogncacknldkaoekchdeddmfnlg?hl=en
 
 -----------------
 This program is free software: you can redistribute it and/or modify
