always show controls works. 1.1.0 release candidate

--- a/README
+++ b/README
@@ -17,9 +17,10 @@ You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -----------------
 
-1.0.2 Changelog
+1.1.0 Changelog
  - Fixed a Pandora bug - album art icon on the top right no longer appears off-screen!
- - Moved "Configure" header link into the user menu (click your email address at the top right)
+ - Moved "Configure" header link into the user menu (click your email address at the top right).
+ - Added 'always show notification window' option - now you can have player controls permanently displayed.
  - Fixes notification issue where it receives a mouseevent on the document when there wasn't one.
  - Settings window redone with tabs - much nicer looking.
  - Settings - replaced 'follow' with 'tweet' button
