lastfm love on like works - scrobbling somehow broke. investigation mode: on!

--- a/README
+++ b/README
@@ -19,7 +19,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 1.1.0 Changelog
  - New: Added 'always show notification window' option - now you can have player controls permanently displayed.
- - New: Show notification on song skip limit.
+ - New: Added 'show notification on song skip limit'.
+ - New: Added 'love on last.fm when liked on Pandora'.
  - Change: Settings window redone with tabs - much nicer looking.
  - Change: in settings, replaced 'follow' with 'tweet' button.
  - Change: Moved "Configure" header link into the user menu (click your email address at the top right).
