last.fm unlove works. not implemented anywhere.

--- a/README
+++ b/README
@@ -24,6 +24,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  - Change: Settings window redone with tabs - much nicer looking.
  - Change: in settings, replaced 'follow' with 'tweet' button.
  - Change: Moved "Configure" header link into the user menu (click your email address at the top right).
+ - Change: Behavior of default settings on first-load.
  - Fix: a native Pandora bug! Album art icon on the top right no longer appears off-screen.
  - Fix: notification issue where it receives a mouseevent on the document when there wasn't one.
  - Fix: Notification window will no longer close when your mouse is over it when resuming play.
