here's what i've got

--- a/README
+++ b/README
@@ -18,6 +18,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -----------------
 
 1.2.0 Changelog
+ - New: Change stations right from the player control notification - configure in settings.
  - New: Song tracking above the player controls. - SUBJECT TO CHANGE
  - Change: Lyrics should be de-censored when using the 'more lyrics' button as well as our Copy link.
  - Fix: bottom-left corner is no longer the only corner without a border-radius.
