no cache message json

--- a/README
+++ b/README
@@ -18,8 +18,9 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -----------------
 
 1.3.2 Changelog
+ - New: Scrobble delay is now configurable.
  - New: Pandora UI state changes now transfer over to notification window.
- - Change: URL parameters no longer used to get song info in notification popups.
+ - Change: Notification code changes. (URL parameters no longer used to get song info in notification popups)
  - Fix: due to the above change, song info with ampersands (&) no longer get cut off.
 
 1.3 Changelog
