--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 PandoraEnhancer is an extension that adds more functionality to Pandora's awesome new HTML5 interface.
 
-It is currently available on the Chrome Web Store at https://chrome.google.com/webstore/detail/ipfamfogncacknldkaoekchdeddmfnlg?hl=en
+It is currently available on the Chrome Web Store at https://chrome.google.com/webstore/detail/ipfamfogncacknldkaoekchdeddmfnlg or http://bit.ly/PandoraEnhancer
 
 -----------------
 This program is free software: you can redistribute it and/or modify
@@ -20,8 +20,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 1.3.2 Changelog
  - New: Scrobble delay is now configurable.
  - New: Pandora UI state changes now transfer over to notification window.
- - Change: Notification code changes. (URL parameters no longer used to get song info in notification popups)
- - Fix: due to the above change, song info with ampersands (&) no longer get cut off.
+ - Change: Improved notification parameter exchange.
+ - Fix: Song info with ampersands (&) no longer get cut off in notification window.
 
 1.3 Changelog
  - New: Donate button added to settings window.
