ladies and gentlemen may i present to you....RadioEnhancer.
*sigh*

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-PandoraEnhancer is an extension that adds more functionality to Pandora's awesome new HTML5 interface.
+RadioEnhancer is an extension that adds more functionality to Pandora's awesome new HTML5 interface.
 
 It is currently available on the Chrome Web Store at https://chrome.google.com/webstore/detail/ipfamfogncacknldkaoekchdeddmfnlg or http://bit.ly/PandoraEnhancer
 
