--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 RadioEnhancer is an extension that adds more functionality to Pandora's awesome new HTML5 interface.
 
-It is currently available on the Chrome Web Store at https://chrome.google.com/webstore/detail/ipfamfogncacknldkaoekchdeddmfnlg or http://bit.ly/PandoraEnhancer
+It is currently available on the Chrome Web Store at https://chrome.google.com/webstore/detail/lfijnebfkjdclmcedinoknekamigckii
 
 -----------------
 This program is free software: you can redistribute it and/or modify
@@ -16,6 +16,17 @@ GNU General Public License for more details.
 You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -----------------
+
+1.4.1 Changelog
+ - New: Auto-mute audio ads option (default enabled).
+ - Fix: Copy lyrics to clipboard works again.
+
+1.4.0 Changelog
+ - New name: RadioEnhancer
+ - Change: last.fm section in settings window looks a bit nicer now.
+ - Fix: Station listing should now properly extend to the bottom of the main window.
+ - Fix: Main content window should now be properly centered.
+
 
 1.3.4 Changelog
  - Change: last.fm section in settings window looks a bit nicer now.
