--- a/README
+++ b/README
@@ -17,6 +17,9 @@ You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -----------------
 
+1.4.3 Changelog - manifest version not updated
+ - New: Last.fm scrobble status is now clickable, it takes you to your profile page.
+
 1.4.2 Changelog
  ~ Internal: lol we weren't packing radio-enhancer.js properly. we are now.
  ~ Internal: Analytics events and debugLog trigger for audio ad auto-mute.
